tests/src/frontend/syntax/invalid/lvalue_binary_double_bang.sk
fun main(): String {
  !x.!y = 42;
  "Fail"
}
